Use temurin base image